rbx-dom/rbx_binary/src/tests/snapshots/rbx_binary__tests__util__two-cframevalues__input.snap
---
source: rbx-dom/rbx_binary/src/tests/util.rs
expression: text_decoded
---
num_types: 1
num_instances: 2
chunks:
  - Meta:
      entries:
        - - ExplicitAutoJoints
          - "true"
  - Inst:
      type_id: 0
      type_name: CFrameValue
      object_format: 0
      referents:
        - 0
        - 1
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - "1, 2, 3, 4, 5, 6, -1, -2, -3, -4, -5, -6"
        - "0.15625, -0.15625, 0.1, -0.1, 0, 0, 1337, -1337, inf, -inf, nan, nan"
  - Prop:
      type_id: 0
      prop_name: SourceAssetId
      prop_type: Int64
      values:
        - -1
        - -1
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: Value
      prop_type: CFrame
      values:
        - position:
            - 1
            - 2
            - 3
          orientation:
            - - 4
              - 5
              - 6
            - - -1
              - -2
              - -3
            - - -4
              - -5
              - -6
        - position:
            - 0.15625
            - -0.15625
            - 0.1
          orientation:
            - - -0.1
              - 0
              - 0
            - - 1337
              - -1337
              - inf
            - - -inf
              - NaN
              - NaN
  - Prnt:
      version: 0
      links:
        - - 0
          - -1
        - - 1
          - -1
  - End
